Updates to add hover states to filters and sort, fix for text wrapping of URLS in content.

--- a/waters-aem-frontend/src/styles/filters.scss
+++ b/waters-aem-frontend/src/styles/filters.scss
@@ -48,6 +48,12 @@
             margin: 0;
             text-decoration: none;
             position: relative;
+            &:hover {
+                color: $color-link;
+                & svg .st0 {
+                    stroke: $color-link;
+                }
+            }
             svg {
                 position: absolute;
                 top: 13px;
@@ -218,7 +224,7 @@
             position: relative;
             svg {
                 position: absolute;
-                top: 10px;
+                top: 11px;
                 left: 9px;
                 width: $icon-s;
                 height: $icon-s;
@@ -238,10 +244,9 @@
                 &:hover {
                     background-color: $color-gray-50;
                 }
-            }
-
+            } 
             @include mobile {
-                padding: $space-xxxs $space-xs $space-xxs ($space-l - .1em);
+                padding: $space-xxxs $space-xs ($space-xxs - .2em) ($space-l - .1em);
             }
         }
         @include tablet-and-under {
@@ -265,6 +270,7 @@
         width: 100%;
         display: block;
         text-transform: uppercase;
+        text-decoration: none;
     }
 
     @include tablet-and-under {
@@ -284,6 +290,7 @@
         width: 100%;
         display: block;
         text-transform: uppercase;
+        text-decoration: none;
     }
 }
 
@@ -353,6 +360,7 @@
             position: relative;
             &:hover,
             &:focus {
+                color: $color-link;
                 outline: none;
                 &::-ms-value {
                     color: inherit;
@@ -371,10 +379,15 @@
             height: $icon-m;
             .st0 {
                 stroke: $color-icon;
+                }
+            }
+            &:hover {
+                & svg .st0 {
+                    stroke: $color-link;
+                }
             }
         }
     }
-}
 
 .cmp-search-filters__tags.clearfix {
     &:after {
